--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+/*   background-image: linear-gradient(120deg, #f6e065 0%, #03707e 100%); */
 body {
-  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
-  color: white;
+  background-image: linear-gradient(200deg, #121212, #40375c 100%);
+  color: rgb(255, 255, 255, 0.87);
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
+
 }
 header {
   font-size: 2rem;
@@ -25,17 +27,18 @@ form button {
   padding: 0.5rem;
   font-size: 2rem;
   border: none;
-  background: white;
+  background: #121212;
+  color: rgba(255, 255, 255, 0.87);
 }
 form button {
-  color: #ff6f47;
-  background: #f7fffe;
+  color: #673ab7;
+  background: #121212;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 form button:hover {
-  background: #ff6f47;
-  color: white;
+  background: #673ab7;
+  color: #121212;
 }
 .todo-container {
   display: flex;
@@ -50,15 +53,17 @@ form button:hover {
 
 .todo {
   margin: 0.5rem;
-  background: white;
+  background: #121212;
   font-size: 1.5rem;
-  color: black;
+  color: rgba(255, 255, 255, 0.87);
   display: flex;
   justify-content: space-between;
   align-items: center;
   transition: all 1s ease;
 }
 .filter-todo {
+  background: #121212;
+  color: rgba(255, 255, 255, 0.87);
   padding: 1rem;
 }
 .todo li {
@@ -67,15 +72,24 @@ form button:hover {
 
 .trash-btn,
 .complete-btn {
-  background: #ff6f47;
-  color: white;
+  background: #522e92;
+  color: #121212;
   border: none;
   padding: 1rem;
   cursor: pointer;
   font-size: 1rem;
+  transition: all 0.3s ease;
 }
 .complete-btn {
-  background: rgb(11, 212, 162);
+  background: #5d34a5;
+}
+.complete-btn:hover {
+  background: #00812b;
+  color: #121212;
+}
+.trash-btn:hover {
+  background: #810000;
+  color: #121212;
 }
 .todo-item {
   padding: 0rem 0.5rem;
@@ -115,7 +129,7 @@ select {
   overflow: hidden;
 }
 select {
-  color: #ff6f47;
+  color: #673ab7;
   font-family: "Poppins", sans-serif;
   cursor: pointer;
   width: 12rem;
@@ -127,9 +141,16 @@ select {
   top: 0;
   right: 0;
   padding: 1rem;
-  background: #ff6f47;
+  background: #673ab7;
   cursor: pointer;
   pointer-events: none;
+  color: #121212;
+  transition: all 0.3s ease;
+}
+.select:hover:after {
+    background: #854be9;
+    color: #121212;
+  
 }
 /* Transition */
 /*
